<resources>
    <string name="app_name">GroceryList</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="list_title">Your List</string>
    <string name="item">Item</string>
    <string name="add_new_item">Add Item</string>
    <string name="quantity">Quantity</string>
    <string name="register_text">New to Grocery List?</string>
    <string name="register_button">Register</string>
</resources>