<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/register_email"
        android:textColor="@color/black"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/gray_dark"
        android:background="@color/white"
        android:padding="4dp"
        android:textFontWeight="500"
        android:fontFamily="@font/montserrat_regular_500"
        android:layout_marginBottom="15dp"
        />
    <EditText
        android:id="@+id/register_password"
        android:textColor="@color/black"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/gray_dark"
        android:background="@color/white"
        android:padding="4dp"
        android:textFontWeight="500"
        android:fontFamily="@font/montserrat_regular_500"
        android:layout_marginBottom="15dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@color/black"
        android:id="@+id/register_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textSize="15sp"
        android:background="@color/white"
        style="?android:attr/borderlessButtonStyle"
        android:textFontWeight="600"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat_bold_600"
        android:textAllCaps="false"
        android:clickable="true"/>
</LinearLayout>