<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/white"
    tools:context=".GroceryList">
    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/list_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textFontWeight="600"
        android:fontFamily="@font/montserrat_bold_600"
        />
    <LinearLayout
        android:id="@+id/new_item_field_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gdl1"
        app:layout_constraintTop_toBottomOf="@id/list_title"
        android:layout_marginBottom="15dp"
        android:paddingBottom="2dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray"
        >
        <EditText
            android:id="@+id/new_item_field"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item"
            android:textColorHint="@color/black_light"
            android:fontFamily="@font/montserrat_bold_600"
            android:padding="4dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/gdl1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"
        />
    <LinearLayout
        android:id="@+id/quantity_field_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gdl1"
        app:layout_constraintTop_toBottomOf="@id/new_item_field_layout"
        android:layout_marginBottom="15dp"
        android:paddingBottom="2dp"
        android:background="@color/gray"
        >
        <EditText
            android:id="@+id/quantity_field"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/quantity"
            android:textColorHint="@color/black_light"
            android:fontFamily="@font/montserrat_bold_600"
            android:textColor="@color/black"
            android:padding="4dp"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_item_button"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/gdl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/quantity_field_layout"
        app:layout_constraintBottom_toBottomOf="@id/quantity_field_layout"
        android:textAllCaps="false"
        android:text="@string/add_new_item"
        android:textAlignment="center"
        android:clickable="true"
        android:background="@drawable/round_border"
        android:layout_marginLeft="20dp"
        android:textFontWeight="600"
        android:fontFamily="@font/montserrat_bold_600"/>
    <ListView
        android:id="@+id/groceries_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/quantity_field_layout"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>