<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/groceries"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_weight="1"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        >
        <TextView
            android:textColor="@color/black"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/login"
            android:textSize="30sp"
            android:textFontWeight="700"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/montserrat_bold_700"
            />
        <LinearLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintStart_toStartOf="@id/login"
            android:background="@color/gray"
            android:paddingBottom="2dp"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/email_field"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/gray_dark"
                android:background="@color/white"
                android:padding="4dp"
                android:inputType="textEmailAddress"
                android:textFontWeight="500"
                android:fontFamily="@font/montserrat_regular_500"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="@id/email"
            android:background="@color/gray"
            android:paddingBottom="2dp"
            android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/password_field"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/gray_dark"
            android:background="@color/white"
            android:padding="4dp"
            android:textFontWeight="500"
            android:fontFamily="@font/montserrat_regular_500"
            />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="@id/password"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textAlignment="center"
            android:clickable="true"
            android:background="@drawable/round_border"
            android:padding="4dp"
            android:textFontWeight="600"
            android:fontFamily="@font/montserrat_bold_600"/>
        <TextView
            android:textColor="@color/black_light"
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            android:text="@string/register_text"
            android:textSize="15sp"
            android:textFontWeight="500"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_regular_500"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/black"
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/register_text"
            app:layout_constraintBaseline_toBaselineOf="@id/register_text"
            android:text="@string/register_button"
            android:textSize="15sp"
            android:background="@color/white"
            android:padding="0dp"
            style="?android:attr/borderlessButtonStyle"
            android:textFontWeight="600"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_bold_600"
            android:textAllCaps="false"
            android:clickable="true"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>